--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <h1>WDD131: Dynamic Web Fundamentals - Lázaro Felizardo Matola</h1>
         <nav>
-            <ul>
+            <ul class="navigation wrap">
                 <li> <a href="https://www.linkedin.com/in/lazaro-felizardo-matola-88202b107/">LinkedIn</a></li>
                 <li> <a href="https://byui.instructure.com">I-Learn</a></li>
                 <li> <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/mosiah/3?lang=eng#:~:text=19%20For%20the,to%20his%20father.">Scripture </a></li>
