--- a/temples.html
+++ b/temples.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         <meta charset="UTF-8">
+        <meta name="description" content="Temple Album">
+        <meta name="keywords" content="HTML,CSS,JavaScript">
+        <meta name="author" content="Lazaro Felizardo Matola">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Temple Album</title>
-        <meta name="description" content="This page is a working example of the WDD 131 required course portal home that will be updated throughout the term"
-        />
-        <meta name="Lazaro Felizardo Matola" content="Temple Album">
 
     
         <link rel="stylesheet" href="week01/styles/temples.css">
