--- a/temples.html
+++ b/temples.html
@@ -48,62 +48,62 @@
             
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                     <figure>                         
                         <img class="hover" src="week01/images/durban-south-africa-temple-7936-main.jpg" alt="my photo" loading="lazy" width="250" height="167">
-                        <figcaption>:hover pseudo-class | box-shadow</figcaption>
+                        <figcaption>Durban South Africa Temple</figcaption>
                     </figure>
 
                 </div>
