--- a/temples.html
+++ b/temples.html
@@ -16,7 +16,8 @@
         <link rel="stylesheet" href="week01/styles/temples.css">
         <link rel="stylesheet" href="week01/styles/temples-large.css">
     
-        <script src="scripts/temples.js" defer></script>
+        <script src="week01/scripts/getdates.js" defer></script>
+        <script src="week01/scripts/temples.js" defer></script>
 
     </head>
 
@@ -26,7 +27,9 @@
 
             <h1>Temple Album</h1>
 
-            <nav>
+            <button id="menu"></button>
+
+            <nav class="navigation wrap">
                 <a href="#" class="active">Home</a>
                 <a href="#">Old</a>
                 <a href="#">New</a>
