--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
         <form method="get" action="review.html">
             <label class="headerLabel" for="productName">Product Name</label>
             <select id="productName" name="subject" required>
-                <option value="" disabled selected>Select a Product ...</option>
+                <option value="" disabled selected>Choose a Product ...</option>
             </select>
             
             <div class="rating-container">
