--- a/Final Project/siteplan.html
+++ b/Final Project/siteplan.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Lazaro Felizardo Matola">
     <meta name="description" content="WDD 131 -  Mozambican gastronomy website plan ">
 
-    <link rel="stylesheet" href="siteplan.css">
-    <script src="getdates.js" defer ></script>
+    <link rel="stylesheet" href="styles/siteplan.css">
+    <script src="scripts/getdates.js" defer ></script>
 
 </head>
 <body>
